- add SearchData update