@@ -1,8 +1,5 @@
 package com.company.app.wildberries.search.domain.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 import com.company.app.common.tool.json.JsonMapper;
 import com.company.app.wildberries.search.domain.entity.SearchData;
 import com.company.app.wildberries.search.domain.repository.SearchDataRepository;
@@ -12,6 +9,8 @@ import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 
 @Service
@@ -30,7 +29,7 @@ public class SearchDataInitializer {
 
         List<SearchData> newSearchDataList = allSearchDataList.stream()
             .filter(searchData -> searchDataRepository.findByChatName(searchData.getChatName()).isEmpty())
-            .collect(Collectors.toList());
+            .toList();
 
         searchDataRepository.saveAll(newSearchDataList);
     }
